--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_BASE_API_URL=http://localhost:8000
+VITE_MCP_API_URL=http://localhost:8100
 VITE_GOOGLE_CLIENT_ID=519758845681-e8bcacft9f4lbkvvur7kq0ckc0if9alb.apps.googleusercontent.com
 VITE_GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
